2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.bind.wrl: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Beethoven.wrl:
	* TransformHandle.wrl:
	* ProximitySensor.wrl: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj: 

2013-07-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* index.wrl:
	* map.htm:
	* moon.jpg:
	* mars.jpg:
	* intro.htm:
	* cosmo.jpg:
	* map.htm:
	* index.htm:
	* earth.jpg:
	* pluto.jpg:
	* venus.jpg:
	* saturn.jpg:
	* uranus.jpg:
	* mars.jpg:
	* moon.jpg:
	* venus.jpg:
	* pluto.jpg:
	* jupiter.jpg:
	* mercury.jpg:
	* neptune.jpg:
	* astrnmy.jpg:
	* astrnmy.wrl:
	* intro.htm:
	* earth.jpg:
	* cosmo.jpg:
	* index.htm:
	* saturn.jpg:
	* uranus.jpg:
	* astrnmy.wrl:
	* neptune.jpg:
	* mercury.jpg:
	* jupiter.jpg:
	* astrnmy.jpg:
	* dir.htm:
	* cred.htm:
	* ping.wav:
	* tech.htm:
	* galaxy.jpg:
	* sci23.wav:
	* nebula1.jpg:
	* nebula2.jpg:
	* comet.wav:
	* ping.wav:
	* sun.jpg:
	* dir.htm:
	* ping.wav:
	* dirtop.htm:
	* atmo30.wav:
	* galaxy.jpg:
	* dirbtn.jpg:
	* tech.htm:
	* beeps2.wav:
	* andrmeda.jpg:
	* galwhirl.jpg:
	* man226.wav:
	* cred.htm:
	* atmo10.wav:
	* planet3.wav:
	* planet1.wav:
	* index.htm:
	* planet6.wav:
	* comet.wav:
	* techbtn.htm:
	* ping.wav:
	* mars.jpg:
	* credbtn.jpg:
	* credbtn.htm:
	* techbtn.jpg:
	* nebula2.jpg:
	* sci23.wav:
	* jupiter.wav:
	* earth13.wav:
	* sun.jpg:
	* nebula1.jpg:
	* moon.htm:
	* dirtop.htm:
	* moon.jpg:
	* index.htm:
	* io.jpg:
	* atmo30.wav:
	* atmo10.wav:
	* beeps2.wav:
	* dirbtn.jpg:
	* man226.wav:
	* galwhirl.jpg:
	* andrmeda.jpg:
	* sci7loop.wav:
	* sunbtn.jpg:
	* earth.jpg:
	* credbtn.htm:
	* planet3.wav:
	* planet1.wav:
	* orbincl.htm:
	* orbincl.jpg:
	* jupiter.wav:
	* earth13.wav:
	* techbtn.jpg:
	* pluto.gif:
	* pluto.jpg:
	* techbtn.htm:
	* index.htm:
	* planet6.wav:
	* mars.jpg:
	* index.htm:
	* rhea.jpg:
	* phobos.jpg:
	* phobos.gif:
	* io2.gif:
	* deimos.jpg:
	* deimos.gif:
	* index.htm: