@@ -8,10 +8,13 @@ Background {
 
 Viewpoint {
   description "Front"
+  position 10 0 10
+  centerOfRotation 10 0 0
 }
 
 Transform {
   children Transform {
+    translation 10 0 0
     rotation 0 -1 0 1.5708
     scale 1 2 3
     children [
