@@ -1,5 +1,12 @@
 2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowser.cpp:
+	* TransformHandle.cpp:
+	* TransformHandle.wrl:
+	* ExamineViewer.cpp: 
+
+2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Browser.h:
 	* Browser.cpp:
 	* X3DViewer.h:
