@@ -1,5 +1,9 @@
 2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TransformHandle.wrl: 
+
+2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Viewpoint.bind.wrl: 
 
 2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>
